--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,9 @@
               <a href="./index.html" class="link header-link">Студия</a>
             </li>
             <li class="header-item">
-              <a href="./portfolio.html" class="link header-link">Портфолио</a>
+              <a href="./portfolio.html" class="link header-link active-page"
+                >Портфолио</a
+              >
             </li>
             <li class="header-item">
               <a href="#" class="link header-link">Контакты</a>
