--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
           >
           <ul class="list header-list">
             <li class="header-item">
-              <a href="./index.html" class="link header-link">Студия</a>
+              <a href="./index.html" class="link header-link active-page"
+                >Студия</a
+              >
             </li>
             <li class="header-item">
               <a href="./portfolio.html" class="link header-link">Портфолио</a>
@@ -70,9 +72,10 @@
             Эффективные решения <br />
             для вашего бизнеса
           </h1>
-          <button class="hero-btn" data-open-modal="">Заказать услугу</button>
+          <button data-modal-open class="hero-btn">Заказать услугу</button>
         </div>
       </section>
+
       <section class="section">
         <div class="container features-container">
           <h2 class="hidden-title">особенности</h2>
@@ -120,14 +123,14 @@
             </li>
             <li class="about-item">
               <div class="about-backdrop">
-                <img src="img/img-1.jpg" alt="" width="370" height="294" />
-                <p class="about-backdrop-text">Десктопные приложения</p>
+                <img src="img/img-2.jpg" alt="" width="370" height="294" />
+                <p class="about-backdrop-text">Мобильные приложения</p>
               </div>
             </li>
             <li class="about-item">
               <div class="about-backdrop">
-                <img src="img/img-1.jpg" alt="" width="370" height="294" />
-                <p class="about-backdrop-text">Десктопные приложения</p>
+                <img src="img/img-3.jpg" alt="" width="370" height="294" />
+                <p class="about-backdrop-text">Дизайнерские решения</p>
               </div>
             </li>
           </ul>
@@ -398,16 +401,18 @@
         </div>
       </div>
     </footer>
-  </body>
-  <!-- ========================MODAL============================ -->
-  <div class="modal-backdrop is-hidden">
-    <div class="modal">
-      <button type="button" class="modal-icon-btn">
-        <svg class="modal-closing-icon">
-          <use href="./img/closing-icon.svg#closing-icon"></use>
-        </svg>
-      </button>
+    <!-- ========================MODAL============================ -->
+    <div data-modal class="modal-backdrop is-hidden">
+      <div class="modal">
+        <button data-modal-close type="button" class="modal-icon-btn">
+          <svg class="modal-closing-icon">
+            <use href="./img/closing-icon.svg#closing-icon"></use>
+          </svg>
+        </button>
+      </div>
     </div>
-  </div>
-  <!-- ========================================================= -->
+    <!-- ========================================================= -->
+
+    <script src="./js/modal.js"></script>
+  </body>
 </html>
