--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
       <section class="section">
         <div class="container features-container">
-          <h2 class="hidden-title">особенности</h2>
+          <h2 class="visually-hidden">особенности</h2>
           <ul class="list features-list">
             <li class="features-item icon-antenna">
               <h3 class="features-title">Внимание к деталям</h3>
@@ -399,16 +399,68 @@
             </li>
           </ul>
         </div>
+        <div class="subscribe-container">
+          <p class="join-text">Подпишитесь на рассылку</p>
+          <form action="#" class="footer-form">
+            <input
+              type="email"
+              name="email"
+              placeholder="E-mail"
+              class="footer-input"
+            />
+            <button class="footer-btn">Подписаться</button>
+          </form>
+        </div>
       </div>
     </footer>
     <!-- ========================MODAL============================ -->
     <div data-modal class="modal-backdrop is-hidden">
-      <div class="modal">
+      <div class="modal-container">
         <button data-modal-close type="button" class="modal-icon-btn">
           <svg class="modal-closing-icon">
             <use href="./img/closing-icon.svg#closing-icon"></use>
           </svg>
         </button>
+        <form class="modal-form">
+          <p class="modal-form-text">
+            Оставьте свои данные, мы вам перезвоним.
+          </p>
+          <label for="name" class="modal-label">Имя</label>
+          <span class="modal-input-container">
+            <input type="text" name="name" id="name" class="modal-input" />
+            <svg class="modal-icon">
+              <use href="./img/modal-sprite.svg#person-icon"></use>
+            </svg>
+          </span>
+          <label for="tel" class="modal-label">Телефон</label>
+          <span class="modal-input-container">
+            <input type="text" name="name" id="name" class="modal-input" />
+            <svg class="modal-icon">
+              <use href="./img/modal-sprite.svg#phone-icon"></use>
+            </svg>
+          </span>
+          <label for="email" class="modal-label">Почта</label>
+          <span class="modal-input-container">
+            <input type="text" name="name" id="name" class="modal-input" />
+            <svg class="modal-icon">
+              <use href="./img/modal-sprite.svg#email-icon"></use>
+            </svg>
+          </span>
+          <label for="comments" class="modal-label">Комментарий</label>
+          <textarea
+            name="comments"
+            id="comments"
+            class="modal-form-comments"
+            placeholder="Введите текст"
+          ></textarea>
+          <label class="modal-conditions-label">
+            <input type="checkbox" class="modal-checkbox-btn checkbox-hidden" />
+            <span class="check-icon"></span>
+            Соглашаюсь с рассылкой и принимаю
+            <a href="#" class="conditions-link">Условия договора</a></label
+          >
+          <button type="submit" class="modal-btn">Отправить</button>
+        </form>
       </div>
     </div>
     <!-- ========================================================= -->
